# TPV2

./: .gitignore
EjerciciosLaboratorio/: CMakeLists.txt
EjerciciosLaboratorio/resources/config/: resources.json  test.resources.json
EjerciciosLaboratorio/src/: main.cpp
EjerciciosLaboratorio/src/game/: AIPaddle.cpp  Containter.cpp  DeAcceleration.h  EmptyRectangleRenderer.cpp  FighterCtrl.cpp  FighterCtrl.h  Game.cpp  Game.h  GameCtrl.cpp  GameManager.cpp  GameObject.h  ImageRenderer.cpp  InfoMsgs.cpp  MovePaddleWithKeyBoard.cpp  MovePaddleWithMouse.cpp  RectangleRenderer.cpp  ScoreRenderer.cpp  ShowAtOppositeSide.cpp  SimpleMove.cpp
Practica1/: CMakeLists.txt
Practica1/resources/config/: asteroid.config.json  asteroid.resources.json  ateroid.resources.json
Practica1/src/: main.cpp
Practica1/src/components/: AsteroidsFacade.h  AsteroidsUtils.h  BounceOnBorders.cpp  BounceOnBorders.h  DeAcceleration.cpp  DeAcceleration.h  FighterCtrl.cpp  FighterCtrl.h  Follow.cpp  Follow.h  GameInfoMsgs.cpp  GameInfoMsgs.h  GameState.cpp  GameState.h  Generations.cpp  Generations.h  Gun.cpp  Gun.h  Health.cpp  Health.h  Image.cpp  Image.h  ImageWithFrames.cpp  ImageWithFrames.h  NewGameState.cpp  NewGameState.h  PaddleAICtrl.cpp  PaddleAICtrl.h  PaddleKBCtrl.cpp  PaddleKBCtrl.h  PaddleMouseCtrl.cpp  PaddleMouseCtrl.h  RectangleViewer.cpp  RectangleViewer.h  ShowAtOppositeSide.cpp  ShowAtOppositeSide.h  StopOnBorders.cpp  StopOnBorders.h  TowardsDestination.cpp  TowardsDestination.h  (+1 more)
Practica1/src/ecs/: Component.h  Entity.h  Manager.cpp  Manager.h
Practica1/src/game/: AIPaddle.cpp  AIPaddle.h  AsteroidsFacade.h  AsteroidsUtils.cpp  AsteroidsUtils.h  BounceOnBorder.cpp  Container.h  Containter.cpp  DeAcceleration.cpp  EmptyRectangleRenderer.h  FighterFacade.h  FighterUtils.cpp  FighterUtils.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  GameOverState.cpp  GameOverState.h  GameState.h  ImageRenderer.h  MovePaddleWithKeyBoard.h  NewGameState.cpp  NewGameState.h  NewRoundState.cpp  NewRoundState.h  PausedState.cpp  PausedState.h  RectangleRenderer.cpp  RectangleRenderer.h  RunningState.cpp  RunningState.h  ShowAtOppositeSide.h  StopOnBorder.cpp  ecs_defs.h
Practica1/src/sdlutils/include/: Font.h  Music.h  RandomNumberGenerator.h  SDLUtils.h  macros.h
Practica1/src/sdlutils/src/: SDLUtilsError.cpp  SoundEffect.cpp  Texture.cpp
Practica1/src/utils/include/: Singleton.h
Practica1/src/utils/src/: Vector2D.cpp
Practica2/: CMakeLists.txt  main.cpp
Practica2/resources/config/: pingpong.cfg.json  resources.json
Practica2/src/components/: Health.h  ImageWithFrames.h  Immunity.h  Miraculous.h  Points.h  Transform.h
Practica2/src/ecs/: Component.h  Entity.h  Manager.cpp  Manager.h  RAEDME.md  System.h  ecs.h  messages_defs_example.h
Practica2/src/game/: Game.cpp  Game.h  GameOverState.cpp  GameState.h  NewGameState.cpp  NewRoundState.cpp  PausedState.cpp  RunningState.cpp  ecs_defs.h  messages_defs.h
Practica2/src/sdlutils/: Font.h  InputHandler.h  SDLNetUtils.cpp  SDLUtils.cpp  SDLUtilsError.h  SoundEffect.cpp  SoundEffect.h  Texture.h  VirtualTimer.h
Practica2/src/systems/: CollisionsSystem.cpp  FoodSystem.cpp  FoodSystem.h  GameCtrlSystem.cpp  GameCtrlSystem.h  GhostSystem.cpp  GhostSystem.h  ImmunitySystem.cpp  ImmunitySystem.h  PacManSystem.cpp  PacManSystem.h  RenderSystem.cpp  RenderSystem.h  StarsSystem.cpp
Practica2/src/utils/: Vector2D.cpp  Vector2D.h  ptr_iterator.h
Practica2/usage_examples/pacman_eat_stars/components/: Image.h
Practica2/usage_examples/pacman_eat_stars/game/: Game.cpp  Game.h  ecs_defs.h
Practica2/usage_examples/pacman_eat_stars/systems/: CollisionsSystem.cpp  GameCtrlSystem.cpp  GameCtrlSystem.h  StarsSystem.cpp  StarsSystem.h
Practica2/usage_examples/pacman_eat_stars_w_msgs/components/: StarMotion.h
Practica2/usage_examples/pacman_eat_stars_w_msgs/game/: Game.cpp  Game.h
Practica2/usage_examples/pacman_eat_stars_w_msgs/systems/: CollisionsSystem.h  GameCtrlSystem.cpp  GameCtrlSystem.h  PacManSystem.cpp  RenderSystem.cpp  RenderSystem.h  StarsSystem.cpp  StarsSystem.h
Practica2/usage_examples/ping_pong/components/: GameState.h  Image.h  RectangleViewer.h
Practica2/usage_examples/ping_pong/game/: ecs_defs.h
Practica2/usage_examples/ping_pong/systems/: BallSystem.cpp  BallSystem.h  CollisionsSystem.cpp  CollisionsSystem.h  GameCtrlSystem.cpp  GameCtrlSystem.h  PaddlesSystem.cpp
Practica2/usage_examples/ping_pong_w_msgs/components/: GameState.h  PaddleCtrl.h  Transform.h
Practica2/usage_examples/ping_pong_w_msgs/game/: Game.cpp  Game.h
Practica2/usage_examples/ping_pong_w_msgs/systems/: BallSystem.cpp  BallSystem.h  CollisionsSystem.cpp  CollisionsSystem.h  GameCtrlSystem.cpp  GameCtrlSystem.h  PaddlesSystem.h  RenderSystem.cpp  RenderSystem.h
Practica3/: CMakeLists.txt  client.bat  main.cpp  server.bat
Practica3/game/: Bullets.cpp  Bullets.h  Fighter.cpp  Fighter.h  Game.cpp  Game.h  LittleWolf.cpp  LittleWolf.h  Networking.cpp  Networking.h  UDPServer.cpp  UDPServer.h  network_messages.h  netwrok_messages.h
Practica3/resources/config/: littlewolf.resources.json
Practica3/resources/maps/little_wolf/: map_0.json  map_1.json
Practica3/sdlutils/: SDLNetUtils.h  SDLUtils.h  SoundEffect.h  sdlutils_demo.cpp
Practica3/src/game/: Game.cpp  Game.h  LittleWolf.cpp  Networking.cpp  Networking.h
Practica3/utils/: DynamicBitSet.h
